--- a/scalar/src/cpu/CMakeLists.txt
+++ b/scalar/src/cpu/CMakeLists.txt
@@ -9,45 +9,47 @@ if (USE_PROFILING)
   target_compile_definitions(profiling PUBLIC -DPROFILING=1)
 endif (USE_PROFILING)
 
+set(CPU_LIBS "OpenMP::OpenMP_CXX;trid_common_options;trid_global_options")
+set(CPU_INTERFACE_LIBS "trid_global_options")
+if (USE_PROFILING)
+  set(CPU_LIBS "${CPU_LIBS};profiling")
+  set(CPU_INTERFACE_LIBS "${CPU_INTERFACE_LIBS};profiling")
+endif (USE_PROFILING)
+
 if (BUILD_FOR_CPU)
-  set(${PROJECT_NAME}_components "${${PROJECT_NAME}_components} tridcpu")
-  set(${PROJECT_NAME}_components
-      ${${PROJECT_NAME}_components}
-      PARENT_SCOPE)
+  if (BUILD_FOR_SN)
+    set(${PROJECT_NAME}_components "${${PROJECT_NAME}_components} tridcpu")
+    set(${PROJECT_NAME}_components
+        ${${PROJECT_NAME}_components}
+        PARENT_SCOPE)
 
-  add_library(tridcpu_sp OBJECT ./trid_cpu.cpp)
-  add_library(tridcpu_dp OBJECT ./trid_cpu.cpp)
-  add_library(tridcpu SHARED $<TARGET_OBJECTS:tridcpu_sp> $<TARGET_OBJECTS:tridcpu_dp>)
-  add_library(${PROJECT_NAME}::tridcpu ALIAS tridcpu)
+    add_library(tridcpu_sp OBJECT ./trid_cpu.cpp)
+    add_library(tridcpu_dp OBJECT ./trid_cpu.cpp)
+    add_library(tridcpu SHARED $<TARGET_OBJECTS:tridcpu_sp> $<TARGET_OBJECTS:tridcpu_dp>)
+    add_library(${PROJECT_NAME}::tridcpu ALIAS tridcpu)
 
-  set(CPU_LIBS "OpenMP::OpenMP_CXX;trid_common_options;trid_global_options")
-  set(CPU_INTERFACE_LIBS "trid_global_options")
-  if (USE_PROFILING)
-    set(CPU_LIBS "${CPU_LIBS};profiling")
-    set(CPU_INTERFACE_LIBS "${CPU_INTERFACE_LIBS};profiling")
-  endif (USE_PROFILING)
-  target_link_libraries(tridcpu_dp PRIVATE ${CPU_LIBS})
-  target_link_libraries(tridcpu_sp PRIVATE ${CPU_LIBS})
-  target_link_libraries(tridcpu PUBLIC ${CPU_INTERFACE_LIBS})
+    target_link_libraries(tridcpu_dp PRIVATE ${CPU_LIBS})
+    target_link_libraries(tridcpu_sp PRIVATE ${CPU_LIBS})
+    target_link_libraries(tridcpu PUBLIC ${CPU_INTERFACE_LIBS})
 
-  set_property(TARGET tridcpu_sp tridcpu_dp PROPERTY POSITION_INDEPENDENT_CODE ON)
+    set_property(TARGET tridcpu_sp tridcpu_dp PROPERTY POSITION_INDEPENDENT_CODE ON)
 
-  target_compile_definitions(tridcpu_sp PRIVATE -DFPPREC=0)
-  target_compile_definitions(tridcpu_dp PRIVATE -DFPPREC=1)
+    target_compile_definitions(tridcpu_sp PRIVATE -DFPPREC=0)
+    target_compile_definitions(tridcpu_dp PRIVATE -DFPPREC=1)
 
-  install(
-    TARGETS tridcpu
-    EXPORT tridcpuTarget
-    LIBRARY DESTINATION ${PROJECT_NAME}/lib
-    ARCHIVE DESTINATION ${PROJECT_NAME}/lib)
-  install(FILES ${PROJECT_SOURCE_DIR}/include/trid_cpu.h ${PROJECT_SOURCE_DIR}/include/trid_common.h
-                ${PROJECT_SOURCE_DIR}/include/trid_simd.h DESTINATION ${PROJECT_NAME}/include)
-  install(
-    EXPORT tridcpuTarget
-    FILE tridcpuTarget.cmake
-    NAMESPACE ${PROJECT_NAME}::
-    DESTINATION ${PROJECT_NAME}/lib/cmake)
-
+    install(
+      TARGETS tridcpu
+      EXPORT tridcpuTarget
+      LIBRARY DESTINATION ${PROJECT_NAME}/lib
+      ARCHIVE DESTINATION ${PROJECT_NAME}/lib)
+    install(FILES ${PROJECT_SOURCE_DIR}/include/trid_cpu.h ${PROJECT_SOURCE_DIR}/include/trid_common.h
+                  ${PROJECT_SOURCE_DIR}/include/trid_simd.h DESTINATION ${PROJECT_NAME}/include)
+    install(
+      EXPORT tridcpuTarget
+      FILE tridcpuTarget.cmake
+      NAMESPACE ${PROJECT_NAME}::
+      DESTINATION ${PROJECT_NAME}/lib/cmake)
+  endif (BUILD_FOR_SN)
   if (BUILD_FOR_MPI)
     set(${PROJECT_NAME}_components "${${PROJECT_NAME}_components} tridcpu_mpi")
     set(${PROJECT_NAME}_components
@@ -65,7 +67,7 @@ if (BUILD_FOR_CPU)
       tridcpu_dp_mpi
       PRIVATE ${CPU_LIBS}
       PUBLIC MPI::MPI_CXX)
-    target_link_libraries(tridcpu_mpi PUBLIC ${CPU_INTERFACE_LIBS} tridcpu MPI::MPI_CXX)
+    target_link_libraries(tridcpu_mpi PUBLIC ${CPU_INTERFACE_LIBS} MPI::MPI_CXX)
 
     set_property(TARGET tridcpu_sp_mpi tridcpu_dp_mpi PROPERTY POSITION_INDEPENDENT_CODE ON)
 
@@ -78,7 +80,7 @@ if (BUILD_FOR_CPU)
       ARCHIVE DESTINATION ${PROJECT_NAME}/lib)
     install(
       FILES ${PROJECT_SOURCE_DIR}/include/trid_common.h
-            ${PROJECT_SOURCE_DIR}/include/trid_simd.h
+            ${PROJECT_SOURCE_DIR}/include/trid_mpi_simd_constants.h
             ${PROJECT_SOURCE_DIR}/include/trid_mpi_cpu.h
             ${PROJECT_SOURCE_DIR}/include/trid_mpi_solver_params.hpp
       DESTINATION ${PROJECT_NAME}/include)
@@ -128,14 +130,14 @@ if (BUILD_FOR_MIC AND CMAKE_CXX_COMPILER_ID MATCHES "Intel")
 
 	add_library(tridmic_native SHARED $<TARGET_OBJECTS:tridmic_native_sp> $<TARGET_OBJECTS:tridmic_native_dp>)
 
-	install(TARGETS tridmic_offload 
+	install(TARGETS tridmic_offload
 		LIBRARY DESTINATION ${CMAKE_BINARY_DIR}/lib
 		ARCHIVE DESTINATION ${CMAKE_BINARY_DIR}/lib)
-	install(TARGETS tridmic_native  
+	install(TARGETS tridmic_native
 		LIBRARY DESTINATION ${CMAKE_BINARY_DIR}/lib
 		ARCHIVE DESTINATION ${CMAKE_BINARY_DIR}/lib)
-	install(FILES ${PROJECT_SOURCE_DIR}/include/trid_cpu.h 
-					${PROJECT_SOURCE_DIR}/include/trid_common.h 
+	install(FILES ${PROJECT_SOURCE_DIR}/include/trid_cpu.h
+					${PROJECT_SOURCE_DIR}/include/trid_common.h
 					${PROJECT_SOURCE_DIR}/include/trid_simd.h
 					${PROJECT_SOURCE_DIR}/src/cpu/trid_mpi_cpu.hpp
 					${PROJECT_SOURCE_DIR}/include/trid_mpi_solver_params.hpp
