Added BUILD_STATIC cmake flag

--- a/scalar/src/cpu/CMakeLists.txt
+++ b/scalar/src/cpu/CMakeLists.txt
@@ -1,5 +1,5 @@
 if (USE_PROFILING)
-  add_library(profiling SHARED ./timing.cpp)
+  add_library(profiling ${BUILD_TYPE} ./timing.cpp)
   target_include_directories(profiling PUBLIC ${PROJECT_SOURCE_DIR}/include)
   set_property(TARGET profiling PROPERTY POSITION_INDEPENDENT_CODE ON)
   if (BUILD_FOR_MPI)
@@ -25,7 +25,7 @@ if (BUILD_FOR_CPU)
 
     add_library(tridcpu_sp OBJECT ./trid_cpu.cpp)
     add_library(tridcpu_dp OBJECT ./trid_cpu.cpp)
-    add_library(tridcpu SHARED $<TARGET_OBJECTS:tridcpu_sp> $<TARGET_OBJECTS:tridcpu_dp>)
+    add_library(tridcpu ${BUILD_TYPE} $<TARGET_OBJECTS:tridcpu_sp> $<TARGET_OBJECTS:tridcpu_dp>)
     add_library(${PROJECT_NAME}::tridcpu ALIAS tridcpu)
 
     target_link_libraries(tridcpu_dp PRIVATE ${CPU_LIBS})
@@ -57,7 +57,7 @@ if (BUILD_FOR_CPU)
         PARENT_SCOPE)
     add_library(tridcpu_sp_mpi OBJECT ./trid_mpi_cpu.cpp)
     add_library(tridcpu_dp_mpi OBJECT ./trid_mpi_cpu.cpp)
-    add_library(tridcpu_mpi SHARED $<TARGET_OBJECTS:tridcpu_sp_mpi> $<TARGET_OBJECTS:tridcpu_dp_mpi>)
+    add_library(tridcpu_mpi ${BUILD_TYPE} $<TARGET_OBJECTS:tridcpu_sp_mpi> $<TARGET_OBJECTS:tridcpu_dp_mpi>)
     add_library(${PROJECT_NAME}::tridcpu_mpi ALIAS tridcpu_mpi)
     target_link_libraries(
       tridcpu_sp_mpi
@@ -125,10 +125,10 @@ if (BUILD_FOR_MIC AND CMAKE_CXX_COMPILER_ID MATCHES "Intel")
 	target_compile_options(tridmic_native_sp PRIVATE -mmic -parallel -qopenmp -fPIC)
 	target_compile_options(tridmic_native_dp PRIVATE -mmic -parallel -qopenmp -fPIC)
 
-	add_library(tridmic_offload SHARED $<TARGET_OBJECTS:tridmic_offload_sp> $<TARGET_OBJECTS:tridmic_offload_dp>)
+	add_library(tridmic_offload ${BUILD_TYPE} $<TARGET_OBJECTS:tridmic_offload_sp> $<TARGET_OBJECTS:tridmic_offload_dp>)
 	set_target_properties(tridmic_offload PROPERTIES LINK_FLAGS -L./libtrid/lib -limf -lintlc -lsvml -lirng)
 
-	add_library(tridmic_native SHARED $<TARGET_OBJECTS:tridmic_native_sp> $<TARGET_OBJECTS:tridmic_native_dp>)
+	add_library(tridmic_native ${BUILD_TYPE} $<TARGET_OBJECTS:tridmic_native_sp> $<TARGET_OBJECTS:tridmic_native_dp>)
 
 	install(TARGETS tridmic_offload
 		LIBRARY DESTINATION ${CMAKE_BINARY_DIR}/lib
