fix boundary_SOA flags

--- a/scalar/CMakeLists.txt
+++ b/scalar/CMakeLists.txt
@@ -5,9 +5,9 @@ option(BUILD_FOR_CPU "Build library for CPU architecture." OFF)
 option(BUILD_FOR_MIC "Build library for MIC architecture." OFF)
 option(BUILD_FOR_GPU "Build library for GPU architecture." OFF)
 option(BUILD_FOR_MPI "Build library for MPI combnied with the above architectures." OFF)
-option(BUILD_FOR_SN  "Build library for a single node combnied with the above architectures." OFF)
+option(BUILD_FOR_SN "Build library for a single node combnied with the above architectures." OFF)
 option(BUILD_TESTING "Build tests for the library." OFF)
-option(BUILD_STATIC  "Build static library" OFF)
+option(BUILD_STATIC "Build static library" OFF)
 option(USE_PROFILING "Build timing library for to measure timings." OFF)
 
 if (BUILD_STATIC)
@@ -100,6 +100,7 @@ if (BUILD_FOR_GPU)
   endif (NOT CMAKE_CUDA_COMPILER)
   enable_language(CUDA)
   set(CMAKE_CUDA_STANDARD 14)
+  set(CMAKE_CXX_EXTENSIONS OFF)
   # use dynamic linking to CUDA runtime to avoid error with CUDA aware MPI
   set(CMAKE_CUDA_RUNTIME_LIBRARY Shared)
   # architecture
